2022-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Test use of undocumented Z80 instructions.

2022-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk,
	  local/freebsd-13-aarch64.mk:
	  Allow compile farm machines to opt into full regression testing.

2021-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/variables.mk: update DCF hub server
	* lib/upload.mk: accept new DCF hub host key automatically

2022-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Test mos6502 port.

2021-06-13 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/variables.mk: cycle through regression test targets every
	  3 days instead of every 2 days to reduce load

2021-05-20 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Test z180 port with --reserve-regs-iy.

2021-04-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* components/sdcc.mk: ignore wineserver errors the shell script
	  way, not the makefile way
	* components/sdcc.mk: fix missing semicolon

2021-04-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* components/sdcc.mk: just let tee create the test log

2021-04-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* components/sdcc.mk: append to regression test log

2021-04-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* components/sdcc.mk: invoke make on each regression target
	  separately so parallelism only occurs within test target.
	  Reset wineserver between test targets

2021-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* local/freebsd-13-aarch64.mk:
	  Configuration for FreeBSD 13 on Raspberry Pi 4.

2021-03-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* components/sdcc.mk: re-enable parallel make in
	  regression tests

2021-01-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/variables.mk: switch to new dcf hub server

2021-01-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/upload.mk: --perms not --perm
